--- a/template/app-permission.html
+++ b/template/app-permission.html
@@ -39,7 +39,7 @@
                                 <BR/>
                             </div>
 
-                            <div style="width: 20%; float: left;" cg-busy="{promise:appPermissionPromise}">
+                            <div style="width: 20%; float: left;" cg-busy="{promise:rolePermissionPromise}">
                                 <h4>Role Permissions</h4>
                                 <input ng-model="filter.rolePermission" style="width: 85%;" type="text" placeholder="Filter Content" />
                                 <select multiple ng-dblclick="movePermissionToApp()" ng-model="roleOpt.permission" data-ng-options="option.name for option in rolePermissionLov track by option.id" class="filter-box__text-input" data-ng-change="checkStatus()">
